--- a/1、小薇学院/任务二/index.html
+++ b/1、小薇学院/任务二/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>实验二</title>
 	<link rel="stylesheet" type="text/css" href="css/my.css">
+	<meta charset="utf-8"/>
 </head>
 <body>
 	<div id="top">
